# oci-langgraph-a2a-blueprint

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README-hub.md  README.md  docker-compose.yml  env.sample  environment.yml  pyproject.toml  start_server.sh  stop_server.sh
agent-factory/: README.md  docker-compose.yml
agent-factory/api/agent_factory_api/: app.py  commands.py  executor.py  models.py  ready_script.py  resources.py
agent-factory/ui/: package-lock.json  package.json
agent-factory/ui/app/: layout.js  page.js
clients/a2a-stream/: README.md
clients/direct-agent/: README.md
docs/: README.md  a2a-1-0-compliance.md  custom-agent.md
server/a2a/: README.md
specs/: 001-general-architecture.md  002-runtime-dependencies.md  003-bare-langgraph-agent.md  004-direct-agent-cli-client.md  005-a2a-sse-server.md  006-runtime-configuration.md  007-a2a-streaming-client.md  008-docker-compose-deployment.md  009-package-structure-separation.md  010-llm-backed-agent-step.md  011-oci-hosted-deployment-factory.md
src/oci_langgraph_a2a_blueprint/: __init__.py  a2a_card.py  a2a_contract.py  a2a_executor.py  a2a_server.py  a2a_server_config.py  agent.py  agent_adapter.py  config.py  parse_utils.py  sample_a2a_server.py  sample_agent_definition.py  state.py  steps.py
src/oci_langgraph_a2a_blueprint/agent/: __init__.py  agent.py  agent_adapter.py  llm_client.py  state.py  steps.py
src/oci_langgraph_a2a_blueprint/clients/: __init__.py  a2a_stream_client.py  direct_agent_cli.py
src/oci_langgraph_a2a_blueprint/framework/: __init__.py  a2a_contract.py  a2a_executor.py  a2a_server.py  a2a_server_config.py
tests/: test_a2a_server.py  test_a2a_server_config.py  test_a2a_stream_client.py  test_agent_factory_api.py  test_bare_langgraph_agent.py  test_config.py  test_direct_agent_cli.py  test_docker_deployment.py  test_llm_client.py  test_parse_utils.py
