[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oci-langgraph-a2a-blueprint"
version = "0.1.0"
description = "Blueprint for deploying a LangGraph agent on OCI as an A2A-compatible server."
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]",
    "httpx",
    "httpx-sse",
    "langchain-core",
    "langgraph",
    "pydantic",
    "python-dotenv",
    "starlette",
    "typing-extensions",
    "uvicorn",
]

[project.scripts]
a2a-langgraph-server = "oci_langgraph_a2a_blueprint.framework.a2a_server:main"
a2a-stream-client = "oci_langgraph_a2a_blueprint.clients.a2a_stream_client:main"
direct-agent-cli = "oci_langgraph_a2a_blueprint.clients.direct_agent_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pylint.main]
py-version = "3.11"
source-roots = ["src"]

[tool.pylint.messages_control]
disable = [
    "too-few-public-methods",
]
